// Copyright 2021-2022, Offchain Labs, Inc.
// For license information, see https://github.com/nitro/blob/master/LICENSE

syntax = "proto3";
package das;

option go_package = "das/dasrpc";

service DASServiceImpl {
  rpc Store(StoreRequest) returns (StoreResponse) {}
  rpc Retrieve(RetrieveRequest) returns (RetrieveResponse) {}
  rpc KeysetFromHash(KeysetFromHashRequest) returns (KeysetFromHashResponse) {}
  rpc CurrentKeysetBytes(CurrentKeysetBytesRequest) returns (CurrentKeysetBytesResponse) {}
}

message StoreRequest {
  bytes message = 1;
  uint64 timeout = 2;
  bytes  sig = 3;
}

message StoreResponse {
  bytes  dataHash = 1;
  uint64 timeout = 2;
  uint64 signersMask = 3;
  bytes  keysetHash = 4;
  bytes  sig = 5;
}

message RetrieveRequest {
  bytes certBytes = 1;
}

message RetrieveResponse {
  bytes result = 1;
}

message KeysetFromHashRequest {
  bytes ksHash = 1;
}

message KeysetFromHashResponse {
  bytes result = 1;
}

message CurrentKeysetBytesRequest {
}

message CurrentKeysetBytesResponse {
  bytes result = 1;
}